fixed login button visibility in desktop view

--- a/styles/login.css
+++ b/styles/login.css
@@ -18,7 +18,6 @@ body{
 .container{
     max-width: 360px;
     width: 100%;
-    height: 60%;
     background-color: #fff;
     border-radius: 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.3);
@@ -115,6 +114,7 @@ input{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 2rem;
 }
 
 button{
